# eigenwave

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  known-issues.md  pr-tests.yml
docs/: ARCHITECTURE.md  STORAGE_INTERNALS.md
examples/: basic_usage.cpp  concatenate_demo.cpp  matmul_demo.cpp  slicing_broadcasting_demo.cpp
include/eigenwave/: broadcast_view.hpp  broadcasting.hpp  concatenate.hpp  matmul.hpp  operations.hpp  slicing.hpp  tensor.hpp
tests/: CMakeLists.txt  test_broadcast_view.cpp  test_broadcasting.cpp  test_concatenate.cpp  test_matmul.cpp  test_slicing_broadcasting.cpp  test_tensor.cpp
